Reduce number of rows

--- a/examples/python/standalone/pinecone-semantic-search-encrypted.ipynb
+++ b/examples/python/standalone/pinecone-semantic-search-encrypted.ipynb
@@ -32,8 +32,8 @@
    "outputs": [],
    "source": [
     "%pip install -qq \\\n",
-    "  \"pinecone-client[grpc]\"==2.2.1 \\\n",
-    "  pinecone-datasets=='0.5.0rc11' \\\n",
+    "  \"pinecone-client[grpc]\"==2.2.4 \\\n",
+    "  pinecone-datasets==0.6.2 \\\n",
     "  sentence-transformers==2.2.2 \\\n",
     "  ironcore-alloy==0.10.2"
    ]
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -63,111 +63,16 @@
     "id": "lOgjRG52Zqqz",
     "outputId": "9923e4a0-901a-486f-9c92-f49a8c06d627"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>values</th>\n",
-       "      <th>sparse_values</th>\n",
-       "      <th>metadata</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>240000</th>\n",
-       "      <td>515997</td>\n",
-       "      <td>[-0.00531694, 0.06937869, -0.0092854, 0.003286...</td>\n",
-       "      <td>{'indices': [845, 1657, 13677, 20780, 27058, 2...</td>\n",
-       "      <td>{'text': ' Why is a \"law of sciences\" importan...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>240001</th>\n",
-       "      <td>515998</td>\n",
-       "      <td>[-0.09243751, 0.065432355, -0.06946959, 0.0669...</td>\n",
-       "      <td>{'indices': [2110, 6324, 9754, 13677, 15207, 2...</td>\n",
-       "      <td>{'text': ' Is it possible to format a BitLocke...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>240002</th>\n",
-       "      <td>515999</td>\n",
-       "      <td>[-0.021924071, 0.032280188, -0.020190848, 0.07...</td>\n",
-       "      <td>{'indices': [2110, 4949, 23579, 23758, 27058, ...</td>\n",
-       "      <td>{'text': ' Can formatting a hard drive stress ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>240003</th>\n",
-       "      <td>516000</td>\n",
-       "      <td>[-0.120020054, 0.024080949, 0.10693012, -0.018...</td>\n",
-       "      <td>{'indices': [22014, 24734, 24773, 25791, 25991...</td>\n",
-       "      <td>{'text': ' Are the new Samsung Galaxy J7 and J...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>240004</th>\n",
-       "      <td>516001</td>\n",
-       "      <td>[-0.095293395, -0.048446465, -0.017618902, -0....</td>\n",
-       "      <td>{'indices': [307, 2110, 5785, 12969, 12971, 13...</td>\n",
-       "      <td>{'text': ' I just watched an add for Indonesia...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            id                                             values  \\\n",
-       "240000  515997  [-0.00531694, 0.06937869, -0.0092854, 0.003286...   \n",
-       "240001  515998  [-0.09243751, 0.065432355, -0.06946959, 0.0669...   \n",
-       "240002  515999  [-0.021924071, 0.032280188, -0.020190848, 0.07...   \n",
-       "240003  516000  [-0.120020054, 0.024080949, 0.10693012, -0.018...   \n",
-       "240004  516001  [-0.095293395, -0.048446465, -0.017618902, -0....   \n",
-       "\n",
-       "                                            sparse_values  \\\n",
-       "240000  {'indices': [845, 1657, 13677, 20780, 27058, 2...   \n",
-       "240001  {'indices': [2110, 6324, 9754, 13677, 15207, 2...   \n",
-       "240002  {'indices': [2110, 4949, 23579, 23758, 27058, ...   \n",
-       "240003  {'indices': [22014, 24734, 24773, 25791, 25991...   \n",
-       "240004  {'indices': [307, 2110, 5785, 12969, 12971, 13...   \n",
-       "\n",
-       "                                                 metadata  \n",
-       "240000  {'text': ' Why is a \"law of sciences\" importan...  \n",
-       "240001  {'text': ' Is it possible to format a BitLocke...  \n",
-       "240002  {'text': ' Can formatting a hard drive stress ...  \n",
-       "240003  {'text': ' Are the new Samsung Galaxy J7 and J...  \n",
-       "240004  {'text': ' I just watched an add for Indonesia...  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pinecone_datasets import load_dataset\n",
     "\n",
     "dataset = load_dataset('quora_all-MiniLM-L6-bm25')\n",
     "dataset.documents.drop(['metadata'], axis=1, inplace=True)\n",
     "dataset.documents.rename(columns={'blob': 'metadata'}, inplace=True)\n",
-    "# we will use 80K rows of the dataset between rows 240K -> 320K\n",
+    "# we will use 20K rows of the dataset between rows 300K -> 320K\n",
     "dataset.documents.drop(dataset.documents.index[320_000:], inplace=True)\n",
-    "dataset.documents.drop(dataset.documents.index[:240_000], inplace=True)\n",
+    "dataset.documents.drop(dataset.documents.index[:300_000], inplace=True)\n",
     "dataset.head()"
    ]
   },
@@ -182,6 +87,7 @@
     "\n",
     "Now that the data is ready, we can set up our index to store it.\n",
     "We begin by initializing our connection to Pinecone. To do this we need a [free API key](https://app.pinecone.io).\n",
+    "\n",
     "We recommend that you generate a new API key for this example, and delete it once the example is completed."
    ]
   },
@@ -296,104 +202,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>values</th>\n",
-       "      <th>sparse_values</th>\n",
-       "      <th>metadata</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>240000</th>\n",
-       "      <td>515997</td>\n",
-       "      <td>[-1383338.0, 311065.375, -990779.0625, -909169...</td>\n",
-       "      <td>{'indices': [845, 1657, 13677, 20780, 27058, 2...</td>\n",
-       "      <td>{'text': 'AElST04Ikc9WmPrM0x5+bbaPdKa2KuESWGq1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>240001</th>\n",
-       "      <td>515998</td>\n",
-       "      <td>[23159.828125, 228334.6875, -594942.8125, 2341...</td>\n",
-       "      <td>{'indices': [2110, 6324, 9754, 13677, 15207, 2...</td>\n",
-       "      <td>{'text': 'AElST04CnqBx6pz33zte3ehLlcDQsd/kW4+K...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>240002</th>\n",
-       "      <td>515999</td>\n",
-       "      <td>[105364.296875, 1943114.75, 598365.25, -136596...</td>\n",
-       "      <td>{'indices': [2110, 4949, 23579, 23758, 27058, ...</td>\n",
-       "      <td>{'text': 'AElST05D6hCOe/9TLPbvRDQwNfEKSr916o6N...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>240003</th>\n",
-       "      <td>516000</td>\n",
-       "      <td>[1773761.25, 193197.625, 1234186.25, 1284603.2...</td>\n",
-       "      <td>{'indices': [22014, 24734, 24773, 25791, 25991...</td>\n",
-       "      <td>{'text': 'AElST07xY8QnWXiLSIbNh+gsUaX8qaVAfmfW...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>240004</th>\n",
-       "      <td>516001</td>\n",
-       "      <td>[255249.1875, -213772.859375, 241323.640625, 1...</td>\n",
-       "      <td>{'indices': [307, 2110, 5785, 12969, 12971, 13...</td>\n",
-       "      <td>{'text': 'AElST07jjQYE7ec9RVeTqZToOqt0UrarJtk3...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            id                                             values  \\\n",
-       "240000  515997  [-1383338.0, 311065.375, -990779.0625, -909169...   \n",
-       "240001  515998  [23159.828125, 228334.6875, -594942.8125, 2341...   \n",
-       "240002  515999  [105364.296875, 1943114.75, 598365.25, -136596...   \n",
-       "240003  516000  [1773761.25, 193197.625, 1234186.25, 1284603.2...   \n",
-       "240004  516001  [255249.1875, -213772.859375, 241323.640625, 1...   \n",
-       "\n",
-       "                                            sparse_values  \\\n",
-       "240000  {'indices': [845, 1657, 13677, 20780, 27058, 2...   \n",
-       "240001  {'indices': [2110, 6324, 9754, 13677, 15207, 2...   \n",
-       "240002  {'indices': [2110, 4949, 23579, 23758, 27058, ...   \n",
-       "240003  {'indices': [22014, 24734, 24773, 25791, 25991...   \n",
-       "240004  {'indices': [307, 2110, 5785, 12969, 12971, 13...   \n",
-       "\n",
-       "                                                 metadata  \n",
-       "240000  {'text': 'AElST04Ikc9WmPrM0x5+bbaPdKa2KuESWGq1...  \n",
-       "240001  {'text': 'AElST04CnqBx6pz33zte3ehLlcDQsd/kW4+K...  \n",
-       "240002  {'text': 'AElST05D6hCOe/9TLPbvRDQwNfEKSr916o6N...  \n",
-       "240003  {'text': 'AElST07xY8QnWXiLSIbNh+gsUaX8qaVAfmfW...  \n",
-       "240004  {'text': 'AElST07jjQYE7ec9RVeTqZToOqt0UrarJtk3...  "
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# first we'll encrypt the vectors\n",
     "for row in dataset.documents.itertuples():\n",
@@ -504,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -567,10 +378,8 @@
     "query = \"which city has the highest population in the world?\"\n",
     "# create the query vector\n",
     "plaintext_query = model.encode(query).tolist()\n",
-    "print(plaintext_query)\n",
     "xq = alloy.PlaintextVector(plaintext_query, \"quora\", \"sentence\")\n",
     "query_vectors = (await sdk.vector().generate_query_vectors({\"vec_1\": xq},tenant_id))[\"vec_1\"]\n",
-    "print(query_vectors[0]) # we would have multiple query vectors if we were in the middle of rekeying data\n",
     "\n",
     "# now query Pinecone\n",
     "xc = index.query(vector=query_vectors[0].encrypted_vector, top_k=5, include_metadata=True)\n",
