--- a/examples/python/standalone/pinecone-semantic-search-encrypted.ipynb
+++ b/examples/python/standalone/pinecone-semantic-search-encrypted.ipynb
@@ -9,9 +9,9 @@
    "source": [
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ironcorelabs/ironcore-alloy/blob/main/examples/python/standalone/pinecone-semantic-search-encrypted.ipynb) [![Open nbviewer](https://raw.githubusercontent.com/pinecone-io/examples/master/assets/nbviewer-shield.svg)](https://nbviewer.org/github/ironcorelabs/ironcore-alloy/blob/main/examples/python/standalone/pinecone-semantic-search-encrypted.ipynb)\n",
     "\n",
-    "# Semantic Search\n",
+    "# Using IronCore Labs Cloaked AI with Pinecone\n",
     "\n",
-    "In this walkthrough we will see how to use Pinecone for semantic search. To begin we must install the required prerequisite libraries:"
+    "In this walkthrough we will see how to use Pinecone for encrypted semantic search. To begin, we must install the required prerequisite libraries:"
    ]
   },
   {
@@ -31,7 +31,7 @@
    },
    "outputs": [],
    "source": [
-    "%pip install -qq \\\n",
+    "%pip install -q \\\n",
     "  \"pinecone-client[grpc]\"==2.2.4 \\\n",
     "  pinecone-datasets==0.6.2 \\\n",
     "  sentence-transformers==2.2.2 \\\n",
@@ -47,7 +47,7 @@
    "source": [
     "## Data Download\n",
     "\n",
-    "In this notebook we will skip the data preparation steps as they can be very time consuming and jump straight into it with the prebuilt dataset from *Pinecone Datasets*. If you'd rather see how it's all done, please refer to [this notebook](https://github.com/pinecone-io/examples/blob/master/learn/search/semantic-search/semantic-search.ipynb).\n",
+    "We will skip the data preparation steps as they can be very time consuming and jump straight into it with the prebuilt dataset from *Pinecone Datasets*. If you'd rather see how it's all done, please refer to [this notebook](https://github.com/pinecone-io/examples/blob/master/learn/search/semantic-search/semantic-search.ipynb).\n",
     "\n",
     "Let's go ahead and download the dataset."
    ]
@@ -463,8 +463,7 @@
    "source": [
     "query = \"which metropolis has the highest number of people?\" # @param {type:\"string\"}\n",
     "# create the query vector\n",
-    "xq = model.encode(query).tolist()\n",
-    "xq = alloy.PlaintextVector(xq, \"quora\", \"sentence\")\n",
+    "xq = alloy.PlaintextVector(model.encode(query).tolist(), \"quora\", \"sentence\")\n",
     "query_vectors = (await sdk.vector().generate_query_vectors({\"vec_1\": xq}, tenant_id))[\"vec_1\"]\n",
     "# now query\n",
     "xc = index.query(vector=query_vectors[0].encrypted_vector, top_k=5, include_metadata=True)\n",
