--- a/examples/python/standalone/pinecone-semantic-search-encrypted.ipynb
+++ b/examples/python/standalone/pinecone-semantic-search-encrypted.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "# Using IronCore Labs Cloaked AI with Pinecone\n",
     "\n",
-    "In this walkthrough we will see how to use Pinecone for encrypted semantic search. To begin, we must install the required prerequisite libraries:"
+    "In this walkthrough we will see how to use Pinecone for encrypted semantic search. To begin, we must install the prerequisite libraries:"
    ]
   },
   {
